AI: refactor, inite microservice and kafka